Fix avatar image on mobile

--- a/styles/profile/one.scss
+++ b/styles/profile/one.scss
@@ -1,5 +1,5 @@
 .myself .profile .one > img {
-  max-width: 200px;
+  max-width: 120px;
   width: 60%;
   max-height: 200px;
   margin: 1em auto;
@@ -12,6 +12,10 @@
   border-radius: 99em;
   border: 5px solid #222;
   box-shadow: 1px 4px 6px 2px rgba(0, 0, 0, 0.2);
+
+  @media (min-width: 480px){
+    max-width: 200px;
+  }
 }
 
 .myself .profile .one .name {
